scss/post.scss
@charset "UTF-8";
/* stylelint-disable color-hex-length */

/* Utilities */

/* see: https://css-tricks.com/books/volume-i/scale-typography-screen-size/ */
@function calculate-dynamic-font-size($min-size-em, $max-size-em) {
  @return calc(#{$min-size-em} - #{$max-size-em/1em - $min-size-em/1em} * (100vw - #{map-get($grid-breakpoints, "sm")}) / #{ map-get($grid-breakpoints, "lg")/1px - map-get($grid-breakpoints, "sm")/1px});
}

/*
 We keep this for an eventual uThere is a bug with Moodle PostCSS processor, that prevent using complex expression in calc expressions so we have
 to thread carefully https://tracker.moodle.org/browse/MDL-61879
*/

/*
  Fixes
 */

.dropdown-item a {
  display: block;
  width: 100%;
  color: $dropdown-link-color;
}


.jschooser .choosercontainer #chooseform .alloptions .option .typename {
  width: auto;
}

.notifytiny {
  margin-top: $navbar-height;
}

/* General */
.btn {
  border-radius: 3px;
}
#page-footer {
  box-shadow: 0px -5px 2px rgba(0, 0, 0, 0.15);
}


/*
 * Navigation bar colors and layout.
 */
.navbar {
  background-color: $savoir-darkgrey;
  padding-left: initial;

  div.logo {
    background-color: $primary;
    width: $drawer-width;
    height: $navbar-height; // For FFX
  }

  .savoir-site-name {
    font-weight: bolder;
    color: white;
  }

  .usermenu {
    a.dropdown-toggle, .login a {
      color: $navbar-dark-active-color;

      @include hover-focus {
        color: $navbar-dark-active-color;
      }
    }

    .dropdown-menu {
      width: 100%;
    }
  }

  /*  .dropdown.nav-item.show {
      background: $dropdown-bg;
    }
  */
}

[data-region="drawer-toggle"] {
  width: $drawer-width;
  @media (max-width: map-get($grid-breakpoints, "md")) {
    width: auto;
  }

  .drawer-img {
    max-height: 35px; /* To be consistent with front page logo size */
  }

  button {
    padding: 7px;
    border: none;
    width: 100%;

    &:focus {
      -webkit-box-shadow: none;
      -moz-box-shadow: none;
      box-shadow: none;
    }
  }
}

[data-region="drawer"] {
  padding-left: initial;
  padding-right: initial;
  background-color: $primary;

  .list-group-item {
    background-color: $primary;
    color: white;
    border: none;
  }

  .list-group-item.active {
    background-color: darken($primary, 10%);
  }

  z-index: $zindex-navbar-fixed + 1; // Avoid the drop shadow
}

.card {
  border: none;
  background: none;
  box-shadow: none;
}

.card-body {
  border-radius: 3px;
  border: none;
  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
  border-top: 3px solid $primary;
}

.card-header {
  background-color: $primary;
  color: white;
}

/* Remove box shadow for first card body and on the header */

.card-no-border, #page-header .card-body {
  border-radius: initial;
  border: none;
  border-top: none;
  box-shadow: none;
}

/* Front page layout */
#page-site-index {
  #page-wrapper {
    background-image: linear-gradient(298deg, #a12365ee, #ff8d00ff), url('[[pix:theme_savoir|background]]');
    background-size: auto;
    background-repeat: no-repeat;
    background-position: center;
  }
  #page-wrapper::after {
    content: initial;
    min-height: initial;
  }

  .card-body {
    box-shadow: none;
    border-top: none;
  }

  .card {
    color: white;

    a {
      color: white;
      @include hover-focus {
        color: white;
      }
    }

    .site-frontpage-slogan {
      max-width: 20em;
      text-align: center;
    }

    .site-frontpage-title {
      font-size: 4vw;
      @media (max-width: map-get($grid-breakpoints, "md")) {
        font-size: xx-large;
      }
      font-weight: bold;
    }

    .connect-button {
      border-radius: 3px;
      border: solid 2px var(--white);
      font-size: x-large;
      font-weight: 600;
      font-style: normal;
      font-stretch: normal;
      line-height: normal;
      letter-spacing: normal;
      text-align: center;
      font-variant: small-caps;
      padding: 0.5em 4em;
      @media (max-width: map-get($grid-breakpoints, "md")) {
        padding: 0.25em 2em;
      }
    }

    min-height: initial;
  }
  #page {
    min-height:100vh;
  }
}

/* Dashboard */
.blockdb-doubleblock {
  width: 49%;
}

.blockdb-singleblock {
  width: 100%;
}

@media (max-width: map-get($grid-breakpoints, "md")) {
  .blockdb-doubleblock {
    width: 100%;
  }
}

.block_calendar_month {
  table.minicalendar {
    width: 100%;

    caption.calendar-controls {
      text-align: center;
    }
  }
}

// Upcoming block
.block_calendar_upcoming {
  .event {
    a[data-type='event'] {
      color: $savoir-darkgrey;
      font-weight: bold;
      @include hover-focus {
        color: $savoir-lightergrey;
      }
      i.icon {
        float: right;
      }
    }

    .date {
      font-size: smaller;
      line-height: 1.75;
      color: lighten($savoir-lightergrey, 10%);

      a {
        color: lighten($savoir-lightergrey, 10%);
        @include hover-focus {
          color: lighten($savoir-lightergrey, 10%);
        }
      }
    }
  }
}

// Calendar block
.block_calendar_month {
  .calendar_event_course {
    background-color: lighten($primary, 50%);

    a {
      font-weight: bolder;
      @include hover-focus {
        text-decoration: none;
      }
    }
  }
  .calendar-controls {
    a.arrow_link.previous {
      float: left;
    }
    a.arrow_link.next {
      float: right;
    }
  }
  .minicalendar {
    text-align: cgienter;
  }
}

// Calendar page

#page-calendar-view {
  .calendarwrapper {
    h3 {
      font-size: initial;
    }

    .card-header {
      background-color: lighten($savoir-darkgrey, 10%);
      padding-top: 0.25em !important;
      padding-bottom: 0.25em !important;

      span.date a {
        color: white;
        @include hover-focus {
          color: white;
        }
      }
    }
  }
}

/** Topic Collapsible Changes */
#page-course-view-topcoll {
  div.sectionhead.toggle {
    background: none;

    &:hover {
      background: none;
    }
  }

  h3.sectionname {
    font-size: $h3-font-size;
    font-weight: bolder;
    font-style: normal;
    font-variant: small-caps;
    line-height: 1.71;
    letter-spacing: normal;
    color: var(--dark-grey);
    text-align: left;
  }

  .tc-small {
    font-size: small;
    font-variant: small-caps;
  }
  .course-content ul.ctopics li.section .content.sectionhidden {
    background-color: transparent;
  }
  .content.sectionhidden > h3 {
    font-size: initial;
  }
}

/* Mods */

/*Quiz*/
.que {
  .formulation {
    border-radius: 3px;
    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
    background-color: white;
    border-top: 3px solid $primary;
  }
  .info {
    background-color: saturate(lighten($secondary,50%),80%);
    border-radius: 3px;
    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
    border-top: 3px solid $primary;
  }
  .submitbtns {
    margin: 0 0 0 8.5em;
  }
}
/** Hack material design icons - TODO add the full MD integration */
[data-region="drawer"] {
  .icon > svg {
    fill: white;
  }
}

